break-word to wrap correctly in code input and output the same

--- a/src/orchestration/editor.css
+++ b/src/orchestration/editor.css
@@ -17,7 +17,7 @@
   white-space: pre-wrap;
   line-height: 1.5em;
   word-wrap: break-word;
-  word-break: normal;
+  word-break: break-word;
 }
 
 .editor .code-input{
